<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Noctua</string>
    <string name="app_id">269961999837342</string>
    <string name="title_activity_login">Login</string>
    <string name="title_facebook_login">Conectar con Noctua</string>
    <string name="user_upper">USUARIO</string>
    <string name="register">Regístrate</string>
    <string name="notaccount">¿No tienes cuenta?</string>
    <string name="password_upper">CONTRASEÑA</string>
    <string name="processing">Procesando</string>
    <string name="warning">Advertencia</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="error">Error</string>
    <string name="errorestablishserver">No se ha podido establecer la conexión con el servidor</string>
    <string name="waitamoment">Espere unos segundos...</string>
    <string name="notenoughparameters">Faltan parámetros por rellenar</string>
    <string name="failuploadphoto">Se ha producido un fallo al subir la foto</string>
    <string name="notcreateuser">No se ha podido crear el usuario</string>
    <string name="mustacceptterms">Debes aceptar los términos de uso</string>
    <string name="access">Acceder</string>
    <string name="birth">Nacimiento</string>
    <string name="birthday">Fecha Nacimiento</string>
    <string name="acceptterms">Sí, acepto los términos de uso</string>
    <string name="termsuse">Términos de uso</string>
    <string name="selection">Selecciona</string>
    <string name="gallery">Galería</string>
    <string name="camera">Cámara</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="mail">Email</string>
    <string name="user">Usuario</string>
    <string name="userdoesntexist">El usuario introducido no existe</string>
    <string name="UneteNosotros">Por favor, rellena los datos y únete a nosotros</string>
    <string name="EstamosEsperando">Te estamos esperando</string>
    <string name="tomarfoto">CÁMARA</string>
    <string name="seleccionarfoto">GALERÍA</string>
    <string name="avatar">AVATAR</string>
    <string name="whereselectionphoto">¿De donde quiere seleccionar la imagen?</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="registrate">Por favor, regístrate para tener acceso</string>
    <string name="yourphoto">Su Foto</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photonotestablished">Debe establecer una foto de perfíl</string>
    <string name="avatares">Avatares</string>
    <string name="miscupones">Mis Noctuas</string>
    <string name="ofertas">Ofertas</string>
    <string name="oferta">Oferta</string>
    <string name="confseleccionaavatar">¿Desea seleccionar esta imagen como su avatar?</string>
    <string name="confirmacion">Confirmación</string>
    <string name="empresa">Empresa</string>
    <string name="enviar">Enviar</string>
    <string name="noestadisticas">No hay estadísticas del lugar</string>
    <string name="desactivacioncompleta">Ya has gastado todas las ofertas disponibles</string>
    <string name="desactivar">Desactivar</string>
    <string name="seguidores">Seguidores</string>
    <string name="mapa">Mapa</string>
    <string name="copas">Copas</string>
    <string name="amigos">Amigos</string>
</resources>
